# Atlantia_Supermarket

./: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  composer.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json
bootstrap/: app.php
ml-service/: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
ml-service/app/: __init__.py  main.py
ml-service/app/api/: __init__.py
ml-service/app/api/v1/: router.py
ml-service/app/core/: __init__.py  config.py  errors.py
ml-service/app/domain/: __init__.py
ml-service/app/domain/schemas/: __init__.py  common.py  fraud.py  prediction.py  recommendation.py  restock.py  review.py  training.py
ml-service/app/domain/services/: __init__.py  fraud_service.py  prediction_service.py  recommendation_service.py  restock_service.py  review_service.py  training_service.py
ml-service/app/infrastructure/: __init__.py
ml-service/app/infrastructure/auth/: __init__.py  dependencies.py
ml-service/app/ml/: __init__.py
ml-service/app/workers/: __init__.py  celery_app.py  tasks.py
ml-service/docker/: Dockerfile.api  Dockerfile.training  Dockerfile.worker
ml-service/scripts/: entrypoint-api.sh  entrypoint-training.sh  entrypoint-worker.sh
ml-service/tests/: __init__.py  test_auth.py  test_health.py  test_prediction.py
ml-service/tests/e2e/: test_prediction_restock_flow.py
ml-service/tests/integration/: test_api_contracts.py
ml-service/tests/ml_quality/: test_forecast_quality.py
ml-service/tests/unit/: test_restock_service.py  test_review_service.py
(+727 files in other folders)
