[project]
name = "atlantia-ml-service"
version = "0.1.0"
description = "Microservicio ML para Atlantia Supermarket"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mlflow>=2.16.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-json-logger>=2.0.7",
    "redis>=5.0.0",
    "scikit-learn>=1.5.0",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=2.1.0",
]

[project.optional-dependencies]
prophet = ["prophet>=1.1.5"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=72.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
